styles/main.css
/* Global styles */
/*:root { */
h1 {
  color: #313030;
  font-family: 'Quicksand', sans-serif;
  font-size: 50px;
}

h2 {
  color: #313030;
  font-family: 'Quicksand', sans-serif;
}

p {
  color: #313030;
  font-family: 'Quicksand', sans-serif;
}

header {
  /*display: inline-flex;*/
  display: flex;
  margin-right: auto;
  background-color: red;
}

#main-menu {
  /*display: flex;
  justify-content: space-around;
  */
  background-color: orange;
}

#navigation {
  display: flex;
  justify-content: flex-end;
  /*float: right;
  margin-left: auto;
  align-items: center;
  */
  background-color: yellow;
}

#menu-title {
  font-size: 40px;
  background-color: green;
}
.menu-item {
  display: flex;
  align-items: center;
  flex: 1;
  padding-left: 5%;
  padding-right: 5%;
}

body {
  background-color: #ffffff;
}

--section-padding: 5px;
/*} */

/*Homepage color scheme*/
.dark-green {
  background-color: #418a06;
}

.med-green {
  background-color: #56b608;
}

.light-green {
  background-color: #65d607;
}

